--- a/Mod/Data/Core/Languages/English/Weapons.xml
+++ b/Mod/Data/Core/Languages/English/Weapons.xml
@@ -6,6 +6,10 @@
     <entry name="GaussReaperFlavor" value="Gauss weapon which trades range for increased hitting power." />
     <entry name="DestroyerWarscythe" value="<string name='Weapons/Warscythe'/>" />
     <entry name="DestroyerWarscytheFlavor" value="<string name='Weapons/WarscytheFlavor'/>" />
+    <entry name="GuardsmanFlamer" value="Flamer" />
+    <entry name="GuardsmanFlamerFlavor" value="<string name='Weapons/FlamerFlavor'/>"/>
+    <entry name="GuardsmanMeltagun" value="Meltagun" />
+    <entry name="GuardsmanMeltagun" value="<string name='Weapons/MeltaFlavor'/>"/>
     <entry name="HeavyLascannon" value="Heavy Lascannon" />
     <entry name="HeavyLascannonFlavor" value="<string name='Weapons/LasFlavor'/>" />
     <entry name="EradicatorNovaCannon" value="Eradicator Nova Cannon" />
