--- a/Mod/Data/Core/Languages/English/Units.xml
+++ b/Mod/Data/Core/Languages/English/Units.xml
@@ -41,4 +41,5 @@
     <entry name="Tau/ReconDrone" value="Recon Drones" />
     <entry name="Tau/ShieldDrone" value="Shield Drones" />
     <entry name="Tau/StealthDrone" value="Stealth Drones" />
+    <entry name="Tau/RVarnaBattlesuit" value="R'Varna Battlesuit"/>
 </language>
