--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -100,17 +100,36 @@
     <entry name="Necrons/EndlessLegions" value="<string name='Traits/Necrons/EndlessLegions'/>" />
     <entry name="Necrons/EndlessLegionsDescription" value="Increases group size of Immortals, Flayed Ones and Necron Warriors." />
     <entry name="Necrons/EndlessLegionsFlavor" value="<string name='Traits/Necrons/EndlessLegionsFlavor'/>" />
+    <entry name="Necrons/GhostProtocol" value="Ghost Protocol" />
+    <entry name="Necrons/GhostProtocolDescription" value="Grants ability to upgrade Ghost Ark by either giving it assault trait or increasing the ranged attacks." />
+    <entry name="Necrons/GhostProtocolFlavor" value="In response to pre-programmed parameters, this Ghost Ark diverts additional power to rapidly repairing and re-deploying the fallen Necron soldiery that it has harvested from the battlefield." />
     <entry name="Necrons/GloomPrismDescription" value="Increases the witchfire damage reduction of Canoptek Spyders and adjacent allied units. Grants Canoptek Spyders ability to permanently increase hit points, armour penetration and damage." />
-    <entry name="Necrons/HousingBuildingBonus" value="Shelter Compression / Accelerated Regrowth"/>
+    <entry name="Necrons/HousingBuildingBonus" value="Shelter Compression / Accelerated Regrowth" />
     <entry name="Necrons/HousingBuildingBonusDescription" value="Increases the population limit. Increases damage reduction of units in cities. Increases the hitpoint restoration from Necrodermis Repair. Removes the cooldown of Necrodermis Repair." />
     <entry name="Necrons/LivingMetal2" value="Undying Revenants" />
     <entry name="Necrons/LivingMetal2Description" value="Increases the healing of Reanimation Protocols and Living Metal." />
     <entry name="Necrons/LivingMetal2Flavor" value="These Necrons rise again and again despite the most grievous wounding, resolutely refusing to succumb to their wounds. Augmented with advanced matter-replication capabilities, these Canoptek constructs can swiftly repair themselves in battle." />
     <entry name="Necrons/NebuloscopeDescription" value="Allows Tomb Blades to ignore ranged damage reduction and increases Tomb Blades armor." />
+    <entry name="Necrons/NecrodermisRepair3Description" value="Increases the healing effect and reduced the cost of Necrodermis Repair." />
+    <entry name="Necrons/OverchargedQuantumShielding" value="Overcharged Quantum Shielding" />
+    <entry name="Necrons/OverchargedQuantumShieldingDescription" value="Grants ability to temporary increase the invulnerable damage reduction of a vehicle, but loses Quantum Shielding for several turns." />
+    <entry name="Necrons/OverchargedQuantumShieldingFlavor" value="Necron quantum shielding is a true marvel of techno-arcana, phasing into existence at the moment of impact and capable of adaptive remodulation to diffuse and deflect even the most powerful enemy attacks." />
+    <entry name="Necrons/PredictiveStrategist" value="Predictive Strategist" />
+    <entry name="Necrons/PredictiveStrategistDescription" value="Reduces the upkeep of units." />
+    <entry name="Necrons/PredictiveStrategistFlavor" value="He that sees the face of the enemy sees only his death, he that hears the words of the enemy hear’est only lies, but he that know’eth the heart of the enemy, hath the wisdom to slay'eth all before him in their measure." />
     <entry name="Necrons/QuantumShieldingDescription" value="Grants vehicles and aircrafts the invulnerable damage reduction." />
     <entry name="Necrons/StormOfFlensingBlades" value="Storm Of Flensing Blades" />
     <entry name="Necrons/StormOfFlensingBladesDescription" value="Grants Flayed Ones ability to pin units with melee attacks and ignore zone of control." />
     <entry name="Necrons/StormOfFlensingBladesFlavor" value="Driven into a grotesque frenzy by the hot gore sluicing through their innards, the Flayed Ones lay about themselves wildly with their vicious talons." />
+    <entry name="Necrons/TheSwarm" value="The Swarm" />
+    <entry name="Necrons/TheSwarmDescription" value="Grants cities, Triarch Stalkers, Wraiths and Monoliths ability to summon Canoptek Scarabs. Removes the cost of Canoptek Scarab summoning." />
+    <entry name="Necrons/TheSwarmFlavor" value="Channelling energy to motivator systems, these warriors swarm towards the enemy in a tide of skittering limbs and humming gravitic motors." />
+    <entry name="Necrons/Translocation" value="Translocation" />
+    <entry name="Necrons/TranslocationDescription" value="Grants Triarch Praetorians ability to ignore overwatch attacks while jumping. Increases the invulnerable damage reduction of Triarch Praetorians." />
+    <entry name="Necrons/TranslocationFlavor" value="These creatures are determined defenders of their territory, their superior necrodermis allowing them to shrug off the mightiest of blows." />
+    <entry name="Necrons/UnlockedPotential" value="Unlocked Potential" />
+    <entry name="Necrons/UnlockedPotentialDescription" value="Increases the output of all building." />
+    <entry name="Necrons/UnlockedPotentialFlavor" value="No greater status symbols are there to the Necron nobility than mighty war engines. Any dynastic leader with designs on hierarchical elevation would do well to pour all the resources they can into furnishing their armoury with the finest weapons they possibly can." />
 
     <entry name="Orks/BoltDamageDescription" value="Increases the armour penetration of bolt weapons." />
     <entry name="Orks/RedPaintJobDescription" value="Increases the damage of Warbuggies, Megatrakk Scrapjets and Battlewagons." />
