--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -124,6 +124,9 @@
     <entry name="Exhausted" value="Exhausted" />
     <entry name="ExhaustedDescription" value="Prevents unit from attacking and moving." />
 
+    <entry name="MannedWeaponGhostArk" value="Manned Weapon"/>
+    <entry name="MannedWeaponGhostArkDescription" value="Increases the ranged attacks while transporting cargo."/>
+
     <entry name="Necrons/AethericInterception" value="Aetheric Interception" />
     <entry name="Necrons/AethericInterceptionDescription" value="Reduces the movement." />
     <entry name="Necrons/AethericInterceptionFlavor" value="With hunters' instincts honed over aeons, the Triarch pounce precisely at the moment their prey enter battle, gunning them down before they can even act." />
