--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -104,6 +104,8 @@
     <entry name="Necrons/DefensiveProtocolsDescription" value="Increases the armour of the Lord. Increases regeneration of nearby allied Necron infantry units and monstrous creatures." />
     <entry name="Necrons/DestructionProtocolsDescription" value="Increases the damage taken for adjacent non-hero enemy units." />
     <entry name="Necrons/DynastyDescription" value="Increases the influence output of your empire." />
+    <entry name="Necrons/InstallAssaultSystem" value="Install Assault System" />
+    <entry name="Necrons/InstallAssaultSystemDescription" value="Grants Ghost Ark ability for disembarking units to not consume movement." />
     <entry name="Necrons/JudgementOfTheTriarch" value="<string name='Traits/Necrons/JudgementOfTheTriarch'/>" />
     <entry name="Necrons/JudgementOfTheTriarchDescription" value="Decreases melee attacks of nearby enemies." />
     <entry name="Necrons/JudgementOfTheTriarchFlavor" value="<string name='Traits/Necrons/JudgementOfTheTriarchFlavor'/>" />
@@ -117,6 +119,8 @@
     <entry name="Necrons/TriarchPraetorianJumpPack" value="<string name='Actions/JumpPack'/>" />
     <entry name="Necrons/TriarchPraetorianJumpPackDescription" value="Flies across obstacles to the target tile. Reduces the movement of adjacent enemy units in destination." />
     <entry name="Necrons/TriarchPraetorianJumpPackFlavor" value="<string name='Actions/JumpPackFlavor'/>" />
+    <entry name="Necrons/UpgradeGaussFlayerArray" value="Upgrade Gauss Flayer Array" />
+    <entry name="Necrons/UpgradeGaussFlayerArrayDescription" value="Increases the ranged attacks of Ghost Ark, but removes ability to transport cargo. additional. Only one upgrade or install can be set up for a unit." />
 
     <entry name="MachineSpirit" value="Machine Spirit" />
     <entry name="MachineSpiritDescription" value="Temporary ignores degradation." />
@@ -131,7 +135,7 @@
     <entry name="SpaceMarines/AdditionalHeavyBolters" value="Install Heavy Bolters" />
     <entry name="SpaceMarines/AdditionalHeavyBoltersDescription" value="Grants Predator additional heavy bolters. Only one upgrade or install can be set up for a unit." />
     <entry name="SpaceMarines/AdditionalStormBolter" value="Install Storm Bolter" />
-    <entry name="SpaceMarines/AdditionalStormBolterDescription" value="Grants Razorback additional storm bolter, but removes ability to transport units. Only one upgrade or install can be set up for a unit." />
+    <entry name="SpaceMarines/AdditionalStormBolterDescription" value="Grants Razorback additional storm bolter, but removes ability to transport cargo. Only one upgrade or install can be set up for a unit." />
     <entry name="SpaceMarines/CamoCloak" value="Camo Cloak" />
     <entry name="SpaceMarines/CamoCloakDescription" value="Temporary increases the ranged damage reduction while in an imperial ruin or a forest" />
     <entry name="SpaceMarines/CamoCloakFlavor" value="The weave of this camo cloak emulates the movements of the elements. As a gust of wind passes, as rainfalls across the battlefield, as the haze of heat shimmers the air, the bearers form flickers in and out of perception. If the bearer remains stationary, they are clouded entirely, a ghost lost to the wilds." />
